# WearableTFLiteTest

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sonymobile/generalobjectdetector/: GeneralObjectLabel.java
app/src/main/jni/cvUtils/: cvUtils_jni.cc
app/src/main/res/layout/: activity_main.xml
app_phone/: build.gradle
app_phone/src/androidTest/java/com/example/app_phone/: ExampleInstrumentedTest.kt
app_phone/src/main/: AndroidManifest.xml
app_phone/src/main/assets/sod/: SOD_SR_BN0008-0000_D0800_C013_P288x288.sod
app_phone/src/main/java/com/example/app_phone/: CustomViewMediaCodec.kt  DetectorTest.kt  ImageClassifier.java  ImageClassifierQuantizedMobileNet.java  ImageClassifierTest.kt  MainActivity.kt
app_phone/src/main/java/com/example/appphone/: CustomViewMediaCodec.kt  DetectorTest.kt  ImageClassifier.java  ImageClassifierQuantizedMobileNet.java  ImageClassifierTest.kt  MainActivity.kt
app_phone/src/main/res/layout/: activity_main.xml
app_phone/src/main/res/values/: strings.xml
app_watch/: build.gradle
app_watch/src/main/: AndroidManifest.xml
app_watch/src/main/jni/cvUtils/: CMakeLists.txt  cvUtils_jni.cc
app_watch/src/main/res/layout/: activity_main.xml
app_watch/src/main/res/values-round/: strings.xml
common/: build.gradle
common/src/main/jni/cvUtils/: cvUtils_jni.cc
common_module/: build.gradle
gpuimageVideoRecordLibrary/: build.gradle
gpuimageVideoRecordLibrary/jni/: CMakeLists.txt  yuv-decoder.c
gradle/wrapper/: gradle-wrapper.properties
(+58 files in other folders)
